# connectrpc

./: 1  Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
connectrpc/: Cargo.toml
connectrpc-build/: Cargo.toml
connectrpc-build/src/: lib.rs
connectrpc-build/tests/: generate.rs
connectrpc/src/: b64.rs  codec.rs  connect.rs  error.rs  header.rs  lib.rs  metadata.rs  request.rs  response.rs  stream.rs
connectrpc/src/client/: mod.rs  reqwest.rs
connectrpc/src/server/: axum.rs  mod.rs
examples/axum-curl-unary/: Cargo.toml  build.rs
examples/axum-curl-unary/src/: lib.rs  main.rs
examples/axum-reqwest/: Cargo.toml  build.rs
examples/axum-reqwest/proto/: hello.proto
examples/axum-reqwest/src/: lib.rs  main.rs
examples/axum-server/: Cargo.toml
examples/axum-server-unary/: Cargo.toml
examples/axum-server-unary/src/: main.rs
examples/axum-server/src/: lib.rs  main.rs
examples/reqwest-client/: Cargo.toml  build.rs
examples/reqwest-client/src/: lib.rs  main.rs
