[package]
name = "connectrpc"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Connect RPC implementation for Rust."
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
client = []
server = []
async = []
sync = []
reqwest = ["dep:reqwest", "client", "async"]
axum = ["dep:axum", "server", "async", "dep:hyper"]

[dependencies]
prost = "0.14"
http = "1"
thiserror = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", optional = true }
serde_json = "1"
tracing = "0.1"
bytes = "1"
form_urlencoded = "1.2.1"
axum = { version = "0.8", optional = true }
hyper = { version = "1.7", default-features = false, optional = true }
