[package]
name = "axum-reqwest"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pbjson = "0.8.0"
pbjson-types = "0.8.0"
serde = { version = "1", features = ["derive"] }
connectrpc = { path = "../../connectrpc", features = ["axum", "reqwest"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
axum = { version = "0.8" }
prost = "0.14"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[build-dependencies]
connectrpc-build = { path = "../../connectrpc-build" }
protoc-fetcher = "0.1.2"
