[package]
name = "axum-server-unary"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pbjson = "0.8.0"
pbjson-types = "0.8.0"
serde = { version = "1", features = ["derive"] }
connectrpc = { path = "../../connectrpc", features = ["axum"] }
axum = { version = "0.8" }
prost = "0.14"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
connectrpc-build = { path = "../../connectrpc-build" }
protoc-fetcher = "0.1.2"
